packaging fix/rebuild

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -108,11 +108,11 @@ MinDesiredFrameRate=20.000000
 CameraTranslationThreshold=1000
 bSmoothFrameRate=True
 TinyFontName=None
-SmallFontName=/Game/Shinsen/UiResources/Common/Fonts/Font_SourceHanSansRegular.Font_SourceHanSansRegular
-MediumFontName=/Game/Shinsen/UiResources/Common/Fonts/Font_SourceHanSansRegular.Font_SourceHanSansRegular
-LargeFontName=/Game/Shinsen/UiResources/Common/Fonts/Font_SourceHanSansRegular.Font_SourceHanSansRegular
-SubtitleFontName=/Game/Shinsen/UiResources/Common/Fonts/Font_SourceHanSansRegular.Font_SourceHanSansRegular
-ShadingLUTTextureName=/Game/Shinsen/Characters/CurveAtlas_ShadingLUT.CurveAtlas_ShadingLUT
+; SmallFontName=/Game/Shinsen/UiResources/Common/Fonts/Font_SourceHanSansRegular.Font_SourceHanSansRegular
+; MediumFontName=/Game/Shinsen/UiResources/Common/Fonts/Font_SourceHanSansRegular.Font_SourceHanSansRegular
+; LargeFontName=/Game/Shinsen/UiResources/Common/Fonts/Font_SourceHanSansRegular.Font_SourceHanSansRegular
+; SubtitleFontName=/Game/Shinsen/UiResources/Common/Fonts/Font_SourceHanSansRegular.Font_SourceHanSansRegular
+; ShadingLUTTextureName=/Game/Shinsen/Characters/CurveAtlas_ShadingLUT.CurveAtlas_ShadingLUT
 MaximumLoopIterationCount=5000000
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
@@ -238,7 +238,7 @@ bUseSplitscreen=True
 TwoPlayerSplitscreenLayout=Horizontal
 ThreePlayerSplitscreenLayout=FavorTop
 bOffsetPlayerGamepadIds=True
-GameInstanceClass=/Game/Shinsen/Core/GameModes/BP_GameInstance.BP_GameInstance_C
+GameInstanceClass=/Script/Shinsen.ShinsenGameInstance
 ; GameDefaultMap=/Game/Shinsen/Maps/Title.Title
 ; ServerDefaultMap=/Engine/Maps/Entry.Entry
 GlobalDefaultGameMode=/Game/Shinsen/Core/GameModes/BP_GameModeDefault.BP_GameModeDefault_C
@@ -355,7 +355,7 @@ SupportedAgentsMask=(bSupportsAgent0=True,bSupportsAgent1=True,bSupportsAgent2=T
 DirtyAreasUpdateFreq=60.000000
 
 [SlateStyle]
-DefaultFontName=/Game/Shinsen/UiResources/Common/Fonts/Font_NewRodinProN_M
+; DefaultFontName=/Game/Shinsen/UiResources/Common/Fonts/Font_NewRodinProN_M
 
 [/Script/NavigationSystem.RecastNavMesh]
 RuntimeGeneration=DynamicModifiersOnly
