--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -24,7 +24,7 @@ MetaDataTagsForAssetRegistry=()
 Build=IfProjectHasCode
 BuildConfiguration=PPBC_Shipping
 BuildTarget=
-FullRebuild=True
+FullRebuild=False
 ForDistribution=False
 IncludeDebugFiles=True
 BlueprintNativizationMethod=Disabled
@@ -33,7 +33,7 @@ bExcludeMonolithicEngineHeadersInNativizedCode=False
 UsePakFile=True
 bUseIoStore=True
 bMakeBinaryConfig=False
-bGenerateChunks=False
+bGenerateChunks=True
 bGenerateNoChunks=False
 bChunkHardReferencesOnly=False
 bForceOneChunkPerFile=False
@@ -49,7 +49,7 @@ PakFileCompressionLevel_Distribution=7
 HttpChunkInstallDataVersion=
 IncludePrerequisites=True
 IncludeAppLocalPrerequisites=False
-bShareMaterialShaderCode=True
+bShareMaterialShaderCode=False
 bDeterministicShaderCodeOrder=False
 bSharedMaterialNativeLibraries=True
 ApplocalPrerequisitesDirectory=(Path="")
