--- a/.gitignore
+++ b/.gitignore
@@ -147,8 +147,9 @@ obj/
 
 # Explcitly ignore Mac DS_Store files, regardless of where they are
 .DS_Store
-Binaries/Win64/Scorn.exe
-Binaries/Win64/Scorn.exp
-Binaries/Win64/Scorn.lib
-Binaries/Win64/Scorn.target
 WindowsNoEditor/Manifest_NonUFSFiles_Win64.txt
+Binaries/Win64/Harvestella-Win64-Shipping.exe
+Binaries/Win64/Harvestella-Win64-Shipping.target
+Build/WindowsNoEditor/ChunkLayerInfo/pakchunklayers.txt
+WindowsNoEditor/Engine/Content/SlateDebug/Fonts/LastResort.tps
+WindowsNoEditor/Manifest_DebugFiles_Win64.txt
