--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -109,7 +109,7 @@ bSkipMovies=True
 ; +DirectoriesToNeverCook=(Path="/Game/SkyboxPack/Maps")
 ; +DirectoriesToNeverCook=(Path="/Game/VaOceanMobile/Maps")
 ; +DirectoriesToAlwaysStageAsUFS=(Path="Shinsen/Data")
-; +DirectoriesToAlwaysStageAsUFS=(Path="Shinsen/MasterData")
++DirectoriesToAlwaysStageAsUFS=(Path="Shinsen/MasterData")
 ; +DirectoriesToAlwaysStageAsUFS=(Path="Shinsen/Version")
 ; +DirectoriesToAlwaysStageAsUFS=(Path="Movies")
 
